# hassio-addons

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.old  cspell.json  repository.json  repository.yaml
.github/workflows/: build.yml  test.yml
freeradius/: API_QUICKSTART.md  CHANGELOG.md  DATABASE_OPTIONS.md  DEPLOYMENT_GUIDE.md  DOCS.md  Dockerfile  POLICY_GUIDE.md  PSK_AUTHENTICATION_ARCHITECTURE.md  RADSEC_SETUP.md  README.md  build.yaml  config.yaml  pytest.ini
freeradius/docs/: CERTIFICATE_MANAGEMENT.md  MODULES_ANALYSIS.md  PERSISTENT_STORAGE_ANALYSIS.md  PERSISTENT_STORAGE_MIGRATION.md  SQL_COUNTER_INTEGRATION.md  SQL_MODULE_INTEGRATION.md
freeradius/scripts/: QUICK_START.md  README.md  smoke_test.py  ssh_tunnel.sh  test_db_quick.sh  test_with_tunnel.sh  validate_deployment.py
freeradius/tests/: conftest.py  run_tests.sh  test_radius_manager_api.py
freeradius/translations/: en.yaml
mariadb-external/: Dockerfile  config.yaml
meraki-wpn-portal/: ADMIN_AUTH.md  AUTH_FIXES.md  BROWSER_CACHE_FIX.md  CHANGELOG.md  DOCS.md  Dockerfile  EXCEPTION_HANDLING.md  FIXING_LINTER_ERRORS.md  LINTER_ERRORS_FIXED.md  Makefile  OAUTH_CONFIG.md  OAUTH_SETUP.md  README.md  SETTINGS_IMPLEMENTATION.md  SETTINGS_MANAGEMENT.md  SETTINGS_UI.md  TESTING.md  build.yaml  config.yaml  env.example  run-standalone.sh  run.sh  setup-vscode.sh  test-local.sh
meraki-wpn-portal/backend/: .pylintrc  README.md  dictionary  pyproject.toml  pyrightconfig.json  pytest.ini
meraki-wpn-portal/backend/app/: __init__.py  config.py  main.py
meraki-wpn-portal/backend/app/api/: __init__.py  admin.py  auth.py  auth_config.py  deps.py  devices.py  email.py  ipsk.py  ipsk_admin.py  qr_codes.py  radius.py  radius_proxy.py  registration.py  user_account.py  user_certificates.py
meraki-wpn-portal/backend/app/core/: __init__.py  cert_renewal_monitor.py  certificate_authority.py  certificate_manager.py  cloudflare_client.py  db_settings.py  email_service.py  ha_client.py  invite_codes.py  ipsk_monitor.py  meraki_client.py  mobileconfig_generator.py  mock_ha_client.py  mock_meraki_client.py  oauth.py  radius_certificates.py  security.py  settings_manager.py  udn_manager.py  wifi_config.py
meraki-wpn-portal/backend/app/db/: __init__.py  database.py  init_schema.py  models.py
meraki-wpn-portal/backend/app/schemas/: __init__.py  auth.py  device.py  ipsk.py  registration.py  settings.py
meraki-wpn-portal/backend/tests/: __init__.py  conftest.py  test_ha_client.py  test_ipsk.py  test_registration.py
meraki-wpn-portal/backend/tests/e2e/: test_full_registration_flow.py  test_radius_authentication.py
meraki-wpn-portal/backend/tests/fixtures/: certificates.py  meraki_mock.py  radius_server.py
meraki-wpn-portal/backend/tests/integration/: test_wpn_radius_sync.py
meraki-wpn-portal/backend/tests/performance/: test_radius_load.py
meraki-wpn-portal/backend/tests/security/: test_certificate_security.py
meraki-wpn-portal/backend/tests/unit/: __init__.py  test_approval_workflow.py  test_certificate_manager.py  test_meraki_org_setting.py  test_udn_manager.py
meraki-wpn-portal/backend/tests/utils/: __init__.py  certificate_helpers.py  docker_helpers.py  radius_client.py
meraki-wpn-portal/data/: meraki_wpn_portal.db
meraki-wpn-portal/frontend/: QUICKSTART.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
meraki-wpn-portal/translations/: en.yaml
ngrok/: CHANGELOG.md  DOCS.md  Dockerfile  EXAMPLE_CONFIGS.md  V3_MIGRATION_GUIDE.md  VALIDATION_CHECKLIST.md  build.yaml  config.json
old/: build.sh  local-test.text  run.sh
tcx/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.json
thousandeyes/: CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DOCS.md  Dockerfile  FILES_OVERVIEW.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.yaml  config.json  config.yaml  env.example  icon.png.md  init.sh  repository.yaml  run.sh
(+195 files in other folders)
