[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "types-qrcode>=7.4.0",
]

[project]
name = "meraki-wpn-portal"
version = "1.0.0"
description = "Meraki WPN Portal - Self-service WiFi registration for Meraki networks"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",
    "meraki>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "qrcode[pil]>=7.4.0",
    "python-multipart>=0.0.6",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "duo-universal>=2.0.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "types-qrcode>=7.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
follow_imports = "silent"
ignore_missing_imports = true
incremental = true
cache_dir = ".mypy_cache"
strict = false
warn_return_any = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qrcode.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["method-assign"]

[tool.ruff]
exclude = [".pyenv", ".venv", "venv", "__pycache__"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D211",  # No blank line before class docstring
    "D212",  # Multi-line docstring summary should start at first line
    "UP047", # Type union syntax
    "B008",  # Function call in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F811",  # Redefinition of unused name (fixtures)
    "D103",  # Missing docstring in public function (tests)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pylint.messages_control]
disable = [
    "redefined-outer-name",        # W0621 - Expected for pytest fixtures
    "protected-access",            # W0212 - Tests often need to access protected members
    "broad-exception-caught",      # W0718 - Intentional for API resilience
    "logging-fstring-interpolation", # W1203 - f-strings are fine in logging
    "import-outside-toplevel",     # C0415 - Sometimes needed for conditional imports
    "global-statement",            # W0603 - Used for singleton patterns
]

[tool.pylint.main]
ignore-patterns = ["test_.*\\.py"]

[tool.codespell]
skip = "*.lock,*/dist/*,*/node_modules/*,*.db"
ignore-words-list = "ipsk,ipsks,ssid,ssids"

[tool.bandit]
exclude_dirs = ["tests", "node_modules", ".venv", "venv"]
skips = [
    "B101",  # assert_used
    "B104",  # hardcoded_bind_all_interfaces
    "B105",  # hardcoded_password_string
    "B106",  # hardcoded_password_funcarg
    "B107",  # hardcoded_password_default
    "B110",  # try_except_pass
    "B311",  # random
    "B404",  # import_subprocess
    "B603",  # subprocess_without_shell_equals_true
]
